modificação da table, css insue

--- a/CalculadoraDiarias.html
+++ b/CalculadoraDiarias.html
@@ -577,7 +577,7 @@ release notes:
 				<p><input type="button" name="calcularint" value="Calcular" onclick="calcDiariaInt();"><input type="reset" name="limpar2" value="Limpar"></p>
 			</form>
 			<table>
-			 	<tr><td colspan="3"><center><b>INFORMAÇÕES SOBRE LOCALIDADES E SUA CLASSIFICAÇÃO</b></center></td></tr>
+			 	<tr><td colspan="3"><b>INFORMAÇÕES SOBRE LOCALIDADES E SUA CLASSIFICAÇÃO</b></td></tr>
 				<tr><td colspan="3"><b>GRUPO A</b></td></tr>
 		 		<tr><td colspan="3">Paíse da América do Sul e Central</td></tr>
 		  		<tr><td>Secretário de Estado ou Equivalentes </td><td>Cargos de Direção e Assessoramento Superior a nível DAS-6, DAS-5, DAS-4 e DAS-3 e Equivalentes nas Autarquias e Fundações  </td><td>Cargos de Direção, Assessoramento Superiores, a nível DAS-2 e DAS-1, Técnicos de Nível Superior, Funções Gratificadas e Demais Cargos, Empregos e Funções Equivalentes nas Autarquias e Fundações</td></tr>
